# Bignum

./: .gitignore  CMakeLists.txt  README.md
examples/: euclidean_alg.c  euclidean_alg.h
src/: basic_op.c  basic_op.h  bignum.c  bignum.h  math_op.c  math_op.h  string_op.c  string_op.h
tests/: alg_tests.c  helper.c  helper.h  main.c  math_tests.c  minunit.h  string_op.c  string_tests.c  tests.h  utils.c  utils.h
